# gh-webhook-server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app_config.json  docker-compose.yml  pyproject.toml  server.py
